@@ -2,6 +2,10 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  26 Apr 2015; Michael Weber <xmw@gentoo.org> -omxplayer-9999-r1.ebuild,
+  omxplayer-0_p20150421.ebuild, omxplayer-9999.ebuild:
+  Update for userland at /usr and provide pined version
+
   24 Apr 2015; Michael Weber <xmw@gentoo.org> omxplayer-0_p20150421.ebuild,
   omxplayer-9999-r1.ebuild:
   allow userland built from source
